# protector

./: CLAUDE.md  LICENSE  README.md  refactor.md
api/: README.md
backend/: README.md  pyproject.toml
backend/api/: main.py
backend/filter/: README.md  main.py  test_whisper_realtime.py
backend/filter/misc/: config.py  consent_capture.py  consent_detector.py  consent_file_utils.py  consent_manager.py  face_detector.py  face_recognizer.py
backend/filter/threads/: audio.py  input.py  video.py
backend/shared/: consent_file_utils.py
docs/: consent-management-architecture.md
examples/rewind/: README.md  index.html
examples/rewind/src/: App.css  App.tsx
filter/: .gitignore  README.md  REVIEW.md  audio_handler.py  config.py  face_detector.py  input_thread_improvement_plan.md  input_thread_standalone_plan.md  main.py  main_old.py  mediamtx.yml  pyproject.toml  test_whisper.py  test_whisper_realtime.py  transcription.py
filter/docs/: consent-screenshot-architecture.md
filter/misc/: config.py  consent_capture.py  consent_detector.py  consent_file_utils.py  consent_manager.py  face_detector.py  face_recognizer.py  pipeline.py  queues.py  state.py  types.py
filter/threads/: audio.py  input.py  input_standalone.py  monitor.py  output.py  speech_worker.py  transcription.py  vad.py  video.py
mobile/: AGENTS.md  tech-arch.md
mobile/backend/: README.md  package-lock.json  package.json  server.ts
mobile/client/: .gitignore  app.json  eslint.config.js  package-lock.json  package.json
mobile/client/app/: index.tsx
tmp/: project.md
(+10 files in other folders)
