[project]
name = "filter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.15",
    "aiortc>=1.13.0",
    "av>=14.4.0",
    "face-recognition>=1.3.0",
    "faster-whisper>=1.1.1",
    "llama-cpp-python>=0.3.14",
    "mediapipe>=0.10.21",
    "opencv-python>=4.11.0.86",
    "pyrtmp>=0.3.1",
    "silero-vad>=5.1.2",
    "uvloop>=0.21.0",
]

[dependency-groups]
dev = [
    "basedpyright>=1.31.1",
    "pytest>=8.4.1",
    "ruff>=0.12.7",
]

[tool.basedpyright]
typeCheckingMode = "strict"
reportMissingTypeStubs = true
reportAny = false
reportExplicitAny = false
